Add integration of HashGeneratorService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=Pastebin
 
+spring.jpa.open-in-view=false
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/pastebin
 spring.datasource.username=postgres
